# CIPRec

./: .gitignore  README.md  evaluate.py  inference.py  pyproject.toml  requirements.txt  run.py
assets/: ciprec_pipeline.mmd
ciprec/: __init__.py  config.py  data.py  index.py  metrics.py  model.py  trainer.py  utils.py
configs/: ciprec_diginetica.yaml  ciprec_nowplaying.yaml  ciprec_retailrocket.yaml  ciprec_toy.yaml
data/: README.md
scripts/: run_toy.sh  train_retailrocket.sh
tests/: test_smoke.py
tools/: inspect_dataset.py  make_toy_data.py  preprocess_sessions.py
